@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-13T08:24:35Z",
-  "count_outdated" : 579,
-  "uniques_outdated" : 332,
-  "count" : 600,
+  "timestamp" : "2022-10-13T16:27:42Z",
+  "count_outdated" : 581,
+  "uniques_outdated" : 333,
+  "count" : 602,
   "uniques" : 344,
   "clones" : [
-    {
-      "timestamp": "2022-09-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-30T00:00:00Z",
       "count": 3,
@@ -63,8 +56,8 @@
     },
     {
       "timestamp": "2022-10-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
