@@ -1,3 +1,11 @@
+2022-10-13T16:27:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3244055682 # 932
+* notice: last 14d: unq all: 5 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 332 579 / 344 600
+* notice: next accum: outdated-unq outdated-all / unq all: 333 581 / 344 602
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-09-29] / [2022-10-13]
+
 2022-10-13T08:24:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3240797717 # 931
 * notice: last 14d: unq all: 5 21
